--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,48 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<head th:replace="fragments/base :: common_head(~{::title},~{::link},~{::script})">
     <title>SRBANK</title>
-
-    <!-- css -->
-    <link rel="stylesheet" th:href="@{/css/reset19.css}">
-    <link rel="stylesheet" th:href="@{/css/style19.css}">
     <link rel="stylesheet" th:href="@{/css/login.css}">
-    <style>
 
-        button {
-            float: none;
-            padding: 8px;
-            background-color: #3b3939;
-            color: #fff;
-            border-radius: 5px;
-            box-sizing: border-box;
-            font-size: 16px;
-            width: 100%;
-        }
-    </style>
-
-    <!--파비콘-->
-    <link rel="shortcut icon" sizes="16x16" th:href="@{img/favicon.ico}">
-
-    <!-- 웹 폰트 -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&amp;subset=korean"
-          rel="stylesheet">
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-            crossorigin="anonymous">
-    </script>
     <script th:inline="javascript">
-        let name = [[${member.name}]];
-        let firstPageNum = [[${page.getNumber()}]];
-        let lastPageNum = [[${page.getTotalPages()}]];
-        let accountnumber = [[${selectAccount}]];
+        let firstPageNum = [[${dwList.getNumber()}]];
+        let lastPageNum = [[${dwList.getTotalPages()}]];
+        let accountNumber = [[${selectAccountNumber}]]
     </script>
-    <script th:src="@{/js/account.js}"></script>
+
+    <script th:src="@{/js/transfer.js}"></script>
 
 </head>
 <body>
@@ -55,21 +23,57 @@
             <div class="help clearfix">
                 <article class="help_box2">
                     <h3><em>거래내역조회</em></h3>
-                    <div class="card">
-                        [[${selectAccount}]]
-                            계좌번호 잔액ㅋ넣기ㅋ
-                        <hr>
+                    <div class="page" sec:authorize="isAuthenticated()">
+                        <div style="overflow: hidden;">
+                            <div style="font-size:17px; display: inline-block ;width:60%;">
+                                <em class="bankName" style="padding:0 20px;" th:text="${selectBankName}"/>
+                                <em class="accountNumber" style="text-align: right; font-size:20px" th:text="${selectAccountNumber}"/>
+                                <p style="color:#ff6289; padding-left:20px">
+                                    <strong style="font-size:1.1em;"
+                                            th:text="${dwList.content.size()==0}? '거래내역이 존재하지 않습니다.':'잔액 '+${dwList.content.get(0).total}"/>
+                                </p>
+                            </div>
+                            <form style="display:inline;" th:action="@{/send}" method="post">
+                                <input type="hidden" name="accountNumber" th:value="${selectAccountNumber}">
+                                <input type="hidden" name="bankName" th:value="${selectBankName}">
+                                <input type="hidden" name="total"
+                                       th:value="${dwList.content.size()==0}? '':${dwList.content.get(0).total}">
+                                <button id="sendBtn">송금하기</button>
+                            </form>
+                        </div>
+                        <hr/>
                         <ul id="test">
-                            <li id="pageList" th:each="dto : ${page}">
-                                <em>[[${dto.date}]]이름</em>
-                                <em th:text="${dto.dw == 0}? 입금:출금"></em>
-                                <em>[[${dto.counterparty}]]</em>
-                                <em>[[${dto.money}]]</em>
-                                <strong>잔액?</strong>
+                            <li class="pageList" th:each="dto : ${dwList}">
+                                <div>
+                                    <p th:text="${#calendars.format(dto.dwDate,'yyyy-MM-dd HH:mm:ss')}"/>
+                                    <div>
+                                        <em style="text-align:left; display: block; width:70px;" th:text="${dto.bankName}+은행"/>
+                                        <div style="display: inline-block; width: 40%;">
+                                            <em th:text="${dto.counterparty}"/>
+                                        </div>
+                                        <em style="padding:0;" th:text="${dto.name}"/>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div style="display: inline-block; width:79%;">
+                                        <div style="text-align: right; font-size:1.4em">
+                                            <em style="padding:0;" th:text="${dto.dw}"/>
+                                        </div>
+                                        <div style="text-align: right">
+                                            <em style="padding:0;">잔액</em>
+                                        </div>
+                                    </div>
+                                    <div style="display:inline-block; text-align:right; width:20%;">
+                                        <div>
+                                        <em id="money" style="font-size: 1.4em; padding:0 25px 0 0;" th:class="${dto.dw}"
+                                            th:text="${dto.money}"/></div>
+                                        <div><em style="padding:0 25px 0 0;" th:text="${dto.total}"/></div>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                         <hr>
-                        <button class="btn1" type="button">더보기</button>
+                        <button class="homeBtn" type="button">더보기</button>
                     </div>
                 </article>
             </div>
