--- a/src/main/resources/templates/fragments/headerAndFooter.html
+++ b/src/main/resources/templates/fragments/headerAndFooter.html
@@ -1,3 +1,4 @@
+<!--header -->
 <header id="header" th:fragment="headerFragment">
     <div class="container">
         <div class="row">
@@ -9,13 +10,21 @@
                     </a>
                 </h1>
                 <nav id="mNav">
-                    <a id="mediaMenu" th:href="@{/login}"><h2 class="ir_so">로그인</h2></a>
-                    <a href="#" class="ham"><span></span></a>
+                    <h2 class="ir_so"><a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a></h2>
+                    <h2 class="ir_so"><a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a></h2>
+<!--                    <a href="#" class="ham"><span></span></a>-->
                 </nav>
                 <nav class="nav">
                     <ul class="clearfix">
-                        <li><a id="menuBar1" th:href="@{/login}">로그인</a></li>
-                        <li><a id="menuBar2" th:href="@{/join}">회원가입</a></li>
+                        <li>
+                            <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+                            <a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/info}">내정보</a>
+                            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}">ADMIN</a>
+                        </li>
+                        <li>
+                            <a sec:authorize="isAnonymous()" th:href="@{/user/join}">회원가입</a>
+                            <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -23,13 +32,13 @@
     </div>
 </header>
 
-
+<!--footer-->
 <footer id="footer" th:fragment="footerFragment">
     <div id="footer_sns">
         <div class="container">
             <div class="footer_sns">
                 <div class="tel">
-                    <a href="#">ARS <em>010-9097-1941</em></a>
+                    <a href="tel:010-0000-0000">ARS <em>010-0000-0000</em></a>
                 </div>
             </div>
         </div>
@@ -40,17 +49,17 @@
                 <div class="footer_infor">
                     <h2><img th:src="@{/img/logo.png}" alt="mainlogo"></h2>
                     <ul>
-                        <li><a href="#">이용상담</a></li>
-                        <li><a href="#">보안프로그램</a></li>
-                        <li><a href="#">사고신고</a></li>
-                        <li><a href="#">전자민원접수</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                        <li><a href="#">신용정보활용체제</a></li>
-                        <li><a href="#">경영공시</a></li>
+                        <li><a href="mailto:test@naver.com">이용상담</a></li>
+                        <li><a href="mailto:test@naver.com">보안프로그램</a></li>
+                        <li><a href="mailto:test@naver.com">사고신고</a></li>
+                        <li><a href="mailto:test@naver.com">전자민원접수</a></li>
+                        <li><a href="mailto:test@naver.com">개인정보처리방침</a></li>
+                        <li><a href="mailto:test@naver.com">신용정보활용체제</a></li>
+                        <li><a href="mailto:test@naver.com">경영공시</a></li>
                     </ul>
                     <address>
                         <p>서울 강남구 테헤란로 7길 7(역삼동 에스코빌딩 6층)<br><span class="bar2">대표자명 ㅇㅇㅇ</span> 개인정보보호 책임자 경영지원실 실장 ㅇㅇㅇ<br><span class="bar2">사업자등록번호 000-00-00000</span> 통신판매업신고번호 제 000호</p>
-                        <p>Copyright SH sssshhh Bank. All Rights Reserved.</p>
+                        <p>Copyright SR SARON Bank. All Rights Reserved.</p>
                     </address>
                 </div>
             </div>
