--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,53 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="webstoryboy">
-    <meta name="description" content="은행 업무 사이트를 위한 사이트입니다.">
-    <meta name="keywords" content="은행, 계좌조회, 송금, 계좌이체">
-    <title>SRBANK</title>
-
-  <!-- css -->
-    <link th:href="@{/css/reset19.css}" href="../css/reset19.css" rel="stylesheet">
-    <link th:href="@{/css/style19.css}" href="../css/style19.css" rel="stylesheet">
-    <style>
-        .help {padding :200px;}
-    </style>
-
-    <!--파비콘-->
-    <link rel="shortcut icon" sizes="16x16" th:href="@{img/favicon.ico}">
-
-
-    <!-- 웹 폰트 -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&amp;subset=korean" rel="stylesheet">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments/base :: common_head(~{::title},~{::link},~{::script})">
+<title>SRBANK</title>
+    <link th:href="@{/css/login.css}" rel="stylesheet">
+    <script th:inline="javascript" sec:authorize="isAuthenticated()">
+        let firstPageNum = [[${page.getNumber()}]];
+        let lastPageNum = [[${page.getTotalPages()}]];
+        let id = [[${#authentication.name}]];
+    </script>
+    <script th:src="@{/js/home.js}" sec:authorize="isAuthenticated()" ></script>
 </head>
 <body>
-
-    <th:block th:replace="fragments/headerAndFooter :: headerFragment"></th:block>
-
-    <section id="help">
-        <div class="container">
-            <div class="row">
-                <div class="help clearfix">
-                    <h3><em>계좌목록</em></h3>
-                    <a th:href="@{/login}">
-                        <article class="help_box2">
-                            <div class="index">
-                                <div>
-                                    <strong class="strong">정보가 없음</strong>
-                                    <em class="em">로그인을 해주세용</em>
-                                </div>     
-                            </div>
-                        </article>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <th:block th:replace="fragments/headerAndFooter :: footerFragment"></th:block>
+<th:block th:replace="fragments/headerAndFooter :: headerFragment"></th:block>
+<th:block th:replace="fragments/content :: index"></th:block>
+<th:block th:replace="fragments/headerAndFooter :: footerFragment"></th:block>
 </body>
 </html>
