--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,12 +5,9 @@
     <link th:href="@{/css/login.css}" th:rel="stylesheet">
     <script th:src="@{/js/login.js}"></script>
 </head>
-
 <body>
-
-<th:block th:replace="fragments/login :: login"></th:block>
+<th:block th:replace="fragments/content :: login"></th:block>
 <th:block th:replace="fragments/headerAndFooter :: footerFragment"></th:block>
-
 </body>
 </html>
 
