--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments/base :: common_head(~{::title},~{::link},~{::script})">
+    <title>SRBANK</title>
+    <link th:href="@{/css/login.css}" rel="stylesheet">
+    <script></script>
 </head>
 <body>
-어드민페이지
+<th:block th:replace="fragments/headerAndFooter :: headerFragment"></th:block>
+<section >
+    <div class="container">
+        <div class="row">
+            <div class="help clearfix">
+                <article class="help_box2">
+                    <h3><em>관리자 페이지</em></h3>
+                    <div style="margin:auto; text-align: center; border:0px;">
+                        <button id="deniedHomeBtn" onclick="location.href='/'">홈으로 가기</button>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+</section>
+<th:block th:replace="fragments/headerAndFooter :: footerFragment"></th:block>
 </body>
 </html>
