--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -59,4 +59,57 @@ button:hover{background-color: #211f1f;}
 
 #deniedHomeBtn{float:none; width:70%;}
 
+.admin {padding: 17px; text-align: center; }
+.admin h4{font-size:20px;}
+.admin strong { padding:0; font-size: 15px; font-weight: 500; color: #666; text-align: center;}
+.admin em {padding:0; width: 50px; font-size: 13px; text-align: center; text-align: center; color:#666;}
+
+.admin table{
+    cellpadding:0;
+    cellspacing:0;
+    border:0;
+    width:100%;
+    table-layout: fixed;
+}
+.admin .tbl-header{
+    background-color: #dbdbdb;
+    color:#fff;
+    margin-top: 12px;
+}
+.admin .tbl-content{
+    height:300px;
+    overflow-x:auto;
+    margin-top: 0px;
+    margin-bottom: 12px;
+    border: 1px solid #dbdbdb;
+}
+.admin th{
+    padding: 10px;
+    text-align: center;
+    font-size: 12px;
+}
+.admin td{
+    padding:10px;
+    text-align: center;
+    vertical-align:middle;
+    /*font-weight: 300;*/
+    font-size: 12px;
+    border-bottom: solid 1px #dbdbdb;;
+}
+
+.admin tr:last-child{
+    border-bottom: none;
+}
+
+/* for custom scrollbar for webkit browser*/
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
 
